[package]
name = "baatein-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
mysql = "25.0.0"
reqwest = {version = "0.12.4", features = ["json"]}
serde = "1.0.198"
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
tower-http = {version = "0.5.2", features = ["full"]}
